<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">MyFridge</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    // login
    <string name="log_in">Log In</string>
    <string name="sign_Up">Sign Up</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logOut">Log out</string>
    <string name="about">About</string>

    <string name="login_signUpLInk">Don\'t have an account? SignUp</string>
    <string name="singUp_loginLink">Have an account?</string>


    // bottom navigation
    <string name="inventoryList">Inventory List</string>
    <string name="shoppingList">Shopping List</string>
    <string name="history">History</string>


    // add pantry Item
    <string name="pantryToolBar">Add Item to your Pantry List</string>
    <string name="shoppingToolBar">Add Item to your Shopping List</string>

    // add item
    <string name="expiryDate">Expiry Date</string>
    <string name="itemName">Item Name</string>
    <string name="addPicture">Add Picture</string>
    <string name="qty">Quantity</string>
    <string name="addItem">Add Item</string>

    // add shopping item
    <string name="addItemDate">Add Item Date</string>

    //About
    <string name="Dev1_name">Abhay Gajipara</string>
    <string name="Dev1_studentId">8859121</string>
    <string name="Dev1_email">AbhayGajipara@gmail.com</string>

    <string name="Dev2_name">RaisaBanu Mohammed</string>
    <string name="Dev2_studentId">8866996</string>
    <string name="Dev2_email">rmohammed6996@conestogac.on.ca</string>

    <string name="Dev3_name">Anusha Metta</string>
    <string name="Dev3_studentId">8854637</string>
    <string name="Dev3_email">Ametta4638@conestogac.on.ca</string>

    <string name="Dev4_name">Rafael de Castro Fagundes Lima</string>
    <string name="Dev4_studentId">8861657</string>
    <string name="Dev4_email">rdecastrofagund1657@conestogac.on.ca</string>
    <string name="login">Login</string>
    <string name="sign_up_image">Sign Up Image</string>
    <string name="login_image">Login Image</string>
    <string name="cancel">Cancel</string>
    <string name="update">Edit</string>
    <string name="delete">Delete</string>
    <string name="quantity_d">Quantity: %d</string>
    <string name="expires_d_days">Expires in: %d days</string>
    <string name="expired">Expired</string>
    <string name="update_item">Update Item</string>
    <string name="updated_quantity">Updated Quantity</string>
    <string name="updated_item_name">Updated Item Name</string>
    <string name="my_fridge">My Fridge</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="about_the_developers">About The Developers</string>
    <string name="add">Add</string>
    <string name="add_item_button">Add Item Button</string>


</resources>