<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/dev_1"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:id="@+id/imgDeveloper1"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dev1_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/dark_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dev1_studentId"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:textColor="@color/dark_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dev1_email"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:textColor="@color/dark_color" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/dev_2"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:id="@+id/imgDeveloper2"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dev2_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/dark_color" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dev2_studentId"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:textColor="@color/dark_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dev2_email"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:textColor="@color/dark_color" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/dev_3"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:id="@+id/imgDeveloper3"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dev3_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/dark_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dev3_studentId"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:textColor="@color/dark_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dev3_email"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:textColor="@color/dark_color" />


    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/dev_4"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:id="@+id/imgDeveloper4"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dev4_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/dark_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dev4_studentId"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:textColor="@color/dark_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dev4_email"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:textColor="@color/dark_color" />
</LinearLayout>
