<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserFragment"
    android:orientation="vertical"
    android:padding="16dp"
    >

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/login_image"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/profile"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"/>
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out" />

</LinearLayout>