<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUpdatedItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/updated_item_name"
        android:layout_marginBottom="15dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtUpdatedItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUpdatedQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/updated_quantity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtUpdatedQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_item"
            android:layout_marginEnd="15dp"
             />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:backgroundTint="@color/cancel"
            />
    </LinearLayout>

</LinearLayout>
