<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


<!--    <ImageView-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_height="150dp"-->
<!--        android:src="@drawable/logo"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:contentDescription="App Log Image" />-->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/applog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_Up"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_marginStart="8dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etUsername_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/username" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPassword_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_Up" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/signUp_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/singUp_loginLink"
        android:layout_gravity="center"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_marginTop="16dp"/>

</LinearLayout>
